--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@
 .App-link {
   color: #61dafb;
 }
+.footer-fixed footer {
+	position: fixed;
+	bottom: 0;
+  width: 100%;
+}
 
 @keyframes App-logo-spin {
   from {
